--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</h1>
 	</header>
 	<script type="text/javascript">
-		dataTime = localStorage.getItem('dataTime');
-		alert('Ultima batida: ' + dataTime);
+		completeDate = localStorage.getItem('completeDate');
+		alert('Ultima batida: ' + completeDate);
 	</script> 
 	<section class="pontoEletro container">
 
